Adding Clicky Clicky button with new activity, dummy text

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_eb_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NUMAD22Sp_EshwariBhide">
-        <activity android:name=".DisplayMessageActivity"
+        <activity android:name=".ClickyClickyActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
+            android:name=".DisplayMessageActivity"
             android:parentActivityName=".MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
